// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`eof '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`eof 'a' conditional success tests AST to match snapshot 1`] = `undefined`;

exports[`eof 'aa' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
